[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Afonso Jorge Ramos <afonsojorgeramos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
regex = "1"